2019-10-31      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/examples/svga/vga.def:  changed licence to GPL3 with
	  extensions.
	* gm2/examples/svga/DisplayBuffer.def:  changed licence to GPL3
	  with extensions.

2019-10-30      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  pruned old comments.  (GM2_DIRS)
	  removed.  All directory targets are tested before being created.
	* gm2/config-lang.in:  directory creation moved into configure.
          (fixes a bug reported by Matthias Klose) where make install
	  would relink cc1gm2.

2019-10-29      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  (gm2/gm2-gcc/%.o) added target dependencies.
          (gm2/gm2-compiler-boot/m2flex.o) added target dependencies.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)libc.o) explicit rule.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)mcrts.o) explicit rule.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)UnixArgs.o) explicit rule.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)Selective.o) explicit rule.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)termios.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)SysExceptions.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)ldtoa.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)dtoa.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)wrapc.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)SYSTEM.o) explicit rule.
          (gm2/gm2-pge/boot/$(SRC_PREFIX)errno.o) explicit rule.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildAssignment) tidied up
          spacing.
	* testsuite/gm2/iso/run/pass/unbounded.mod:  added many
          more asserts.
	* testsuite/lib/gm2.exp:  removed libulm from the list of
          libraries.
	* gm2/Make-lang.in:  (gm2/gm2-gcc/%.o) added MCDEPS LIBDEPS.
          (gm2/gm2-pge-boot/$(SRC_PREFIX)%.o) place C file into
          gm2/gm2-pge-boot.  (gm2/gm2-pge-boot/%.o) place C file into
	  gm2/gm2-pge-boot.