@@ -1,3 +1,8 @@
+2019-11-04      Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* gm2/gm2-libs/config-host.in:  (AC_CHECK_HEADERS)
+          quote all header files.
+
 2019-10-31      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* gm2/examples/svga/vga.def:  changed licence to GPL3 with
